Time: 0 ms (100.00%) | Memory: 42.8 MB (10.00%) - LeetSync