@@ -1,20 +1,25 @@
 class Solution {
-    List<List<Integer>> result = new ArrayList<>();
+    private List<List<Integer>> result = new ArrayList<>();
+
     public List<List<Integer>> combinationSum3(int k, int n) {
-        dfs(1, n, new ArrayList<>(), k);
+        backtrack(1, n, k, new ArrayList<>());
         return result;
     }
 
-    void dfs(int start, int remainingSum, List<Integer> currentList, int count) {
-        if(remainingSum == 0 && currentList.size() == count) {
-            result.add(new ArrayList<>(currentList));
+    private void backtrack(int start, int remaining, int k, List<Integer> path) {
+        // If we picked k numbers, we can only accept if remaining == 0
+        if (path.size() == k) {
+            if (remaining == 0) result.add(new ArrayList<>(path));
+            return; // either way, stop exploring
         }
-        
-        for(int a = start; a <= 9; a++) {
-            if (remainingSum - a < 0) continue;
-            currentList.add(a);
-            dfs(a + 1, remainingSum - a, currentList, count);
-            currentList.removeLast();
+
+        // Try picking the next number from start..9
+        for (int num = start; num <= 9; num++) {
+            if (num > remaining) break; // pruning (numbers only get bigger)
+
+            path.add(num);
+            backtrack(num + 1, remaining - num, k, path); // num+1 prevents reuse
+            path.remove(path.size() - 1); // undo
         }
     }
 }
